--- a/happybday.html
+++ b/happybday.html
@@ -78,7 +78,7 @@ animation: fadeIn 0s ease-in-out;
     .lettr {
       
       font-size: 45px;
-      margin-left: 30px;
+      margin-left: 10px;
       animation: fadeIn 1s ease-in-out;
       margin-top: 30px;
       
@@ -240,7 +240,7 @@ animation: fadeIn 1s ease-in-out;
       </div>
       <div class="card-back">
         <h3 class="lettr">
-𝘏𝘢𝘱𝘱𝘺 𝘉𝘪𝘳𝘵𝘩𝘥𝘢𝘺, 𝘚𝘦𝘤𝘩𝘪..🫂💖, 𝘐 𝘸𝘢𝘯𝘵𝘦𝘥 𝘵𝘰 𝘨𝘦𝘵 𝘺𝘰𝘶 𝘴𝘰𝘮𝘦𝘵𝘩𝘪𝘯𝘨 𝘢𝘮𝘢𝘻𝘪𝘯𝘨, 𝘣𝘶𝘵 𝘵𝘩𝘦𝘯 𝘐 𝘳𝘦𝘮𝘦𝘮𝘣𝘦𝘳𝘦𝘥 𝘺𝘰𝘶 𝘢𝘭𝘳𝘦𝘢𝘥𝘺 𝘩𝘢𝘷𝘦 𝘮𝘦🤩✨, 𝘴𝘰 𝘺𝘰𝘶’𝘳𝘦 a 𝘭𝘶𝘤𝘬𝘺 𝘱𝘦𝘳𝘴𝘰𝘯 𝘵𝘰 𝘩𝘢𝘷𝘦 𝘢 𝘱𝘳𝘦𝘤𝘪𝘰𝘶𝘴 𝘧𝘳𝘪𝘦𝘯𝘥 𝘭𝘪𝘬𝘦 𝘮𝘦😁🫂
+𝘏𝘢𝘱𝘱𝘺 𝘉𝘪𝘳𝘵𝘩𝘥𝘢𝘺, 𝘚𝘦𝘤𝘩𝘪..🫂💖𝘐 𝘸𝘢𝘯𝘵𝘦𝘥 𝘵𝘰 𝘨𝘦𝘵 𝘺𝘰𝘶 𝘴𝘰𝘮𝘦𝘵𝘩𝘪𝘯𝘨 𝘢𝘮𝘢𝘻𝘪𝘯𝘨, 𝘣𝘶𝘵 𝘵𝘩𝘦𝘯 𝘐 𝘳𝘦𝘮𝘦𝘮𝘣𝘦𝘳𝘦𝘥 𝘺𝘰𝘶 𝘢𝘭𝘳𝘦𝘢𝘥𝘺 𝘩𝘢𝘷𝘦 𝘮𝘦🤩✨, 𝘴𝘰 𝘺𝘰𝘶’𝘳𝘦 a 𝘭𝘶𝘤𝘬𝘺 𝘱𝘦𝘳𝘴𝘰𝘯 𝘵𝘰 𝘩𝘢𝘷𝘦 𝘢 𝘱𝘳𝘦𝘤𝘪𝘰𝘶𝘴 𝘧𝘳𝘪𝘦𝘯𝘥 𝘭𝘪𝘬𝘦 𝘮𝘦😁🫂
         </h3>
         <p class="cake">🎂 🎈 🎁</p>
         <button class="flip-button" onclick="flipCard()">back</button>
