--- a/happybday.html
+++ b/happybday.html
@@ -286,7 +286,7 @@ animation: fadeIn 1s ease-in-out;
   </div>
 
   <div>
-    <h1 class="end">.end.</h1>
+    <h1 class="end">.END.</h1>
   </div>
 
   <script>
