--- a/happybday.html
+++ b/happybday.html
@@ -283,6 +283,9 @@ animation: fadeIn 1s ease-in-out;
     <div class="product-card">
       <img src="https://i.imgur.com/tQ8oYbP.jpeg" alt="Product 4">
     </div>
+       <div class="product-card">
+      <img src="https://i.imgur.com/5cHkeSp.jpeg" alt="Product 5">
+    </div>
   </div>
 
   <div>
