--- a/happybday.html
+++ b/happybday.html
@@ -285,6 +285,8 @@ animation: fadeIn 1s ease-in-out;
     </div>
        <div class="product-card">
       <img src="https://i.imgur.com/5cHkeSp.jpeg" alt="Product 5">
+    </div>    <div class="product-card">
+      <img src="https://i.imgur.com/3hfDTkz.jpeg" alt="Product 6">
     </div>
   </div>
 
